--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">coil-skeleton-painter</string>
+    <string name="app_name">easy_shimmer_compose</string>
 </resources>
